--- a/apps/search/templates/search/home.html
+++ b/apps/search/templates/search/home.html
@@ -19,10 +19,10 @@
       {% endif %}
       <div class="d-flex h-100 text-center align-items-center">
          <div class="w-100 text-white engine-pos">
-            <h1 class="text-center">SearchCPD</h1>
+            <h1 class="text-center">searchCPD</h1>
             <h4 class="title">
-               <p href="" class="typewrite" data-period="3000"
-                  data-type='[ "Hold Police Officers Accountable", "Search for any CPD officer by badge number", "Post true anonymous complaints", "Algorithmically address police brutality", "Create preventative measures", "Let us create a better Chicago" ]'>
+               <p href="" class="typewrite" data-period="3500"
+                  data-type='[ "Hold Police Officers Accountable", "Search for any CPD officer by badge number", "Post true anonymous reviews", "Algorithmically address police brutality", "Create preventative measures", "Let us create a better Chicago" ]'>
                </p>
                <span class="wrap"></span>
             </h4>
@@ -49,12 +49,6 @@
       </div>
    </div>
 </header>
-{% include './components/modals.html'%}
-<script>
-setTimeout(function () {
-   $('#exampleModalCenter').modal('show');
-}, 10000);
-</script>
 
 
 {% comment %} <table class="table table-hover table-dark">
