--- a/apps/search/templates/search/success.html
+++ b/apps/search/templates/search/success.html
@@ -6,7 +6,7 @@
 		<h4>Thank you for your contribution of ${{amount}}!</h4>
 		<p>Your support helps us fulfill the dream of holding out public servants accountable! We really appreciate it!</p>
 		<hr>
-		<a class="myButton" href="{% url 'root' %}">&#x2190;Back to search engine page</a>
+		<a class="myButton" href="{% url 'root' %}">&#x2190;Back to Home Page</a>
 	</div>
 
 {% endblock content %}
