--- a/apps/search/templates/search/components/modals.html
+++ b/apps/search/templates/search/components/modals.html
@@ -33,13 +33,14 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Using this tool</h5>
+        <h5 class="modal-title" id="exampleModalLongTitle">About Donations</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        This tool is meant to be used to help city officials and community members identify the officers that are high risk of abusing their authority, so please use this tool responsibly.
+        Our donation system uses Stripe. Is Stripe a Secure Payment Method? Of course! 
+        Stripe is certified as a Level 1 Service Provider, which is the highest level of certification for payment processors. Stripe complies with the Payment Card Industry Data Security Standard (PCI-DSS), a set of security standards established by major card brands like Visa, Mastercard, and American Express. This compliance ensures that Stripe maintains a secure environment for handling credit card data. 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
