--- a/apps/search/templates/search/components/navbar.html
+++ b/apps/search/templates/search/components/navbar.html
@@ -17,6 +17,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'about'%}">About</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" target=”_blank” href="https://github.com/chuymedina96/search_cpd_open">Contribute <i class="fa fa-github"></i></a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Insights
@@ -27,6 +30,10 @@
                         <a class="dropdown-item" href="#">Worst Rated Officers</a>
                         <a class="dropdown-item" href="#">Data Visualizations</a> {% endcomment %}
                         </div>
+                    </li>
+        
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'contact'%}">Contact us</a>
                     </li>
                 </ul>
             </div>
