--- a/apps/search/templates/search/donate_template.html
+++ b/apps/search/templates/search/donate_template.html
@@ -2,15 +2,6 @@
 {% load static %}
 <html>
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122221634-2"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'UA-122221634-2');
-	</script>
 	<title>Support us</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	{% if title %}
@@ -18,15 +9,13 @@
 	{% else %}
 		<title>SearchCPD</title>
 	{% endif %}
-	{% comment %} <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> {% endcomment %}
-
 	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Inter&display=swap" rel="stylesheet">
 
 	<!-- Landing page styling -->
 	<style type="text/css">
 
 		body{
-			background-color: #F8F8F8;
+			background-color: black;
 		}
 
 		h3, h5{
@@ -177,9 +166,6 @@
 			text-align: center;
 			transition: .3s;
 		}
-		.myButton:hover {
-			opacity: .6;
-		}
 
 		@media screen and (max-width:1200px){
 			#container{
@@ -247,9 +233,6 @@
 			text-decoration:none;
 			text-align: center;
 			transition: .3s;
-		}
-		.myButton:hover {
-			opacity: .6;
 		}
 
 		#succes-icon{
