--- a/apps/search/templates/search/donate.html
+++ b/apps/search/templates/search/donate.html
@@ -120,7 +120,7 @@
 
 	<script>
 		// Create a Stripe client.
-		var stripe = Stripe('');
+		var stripe = Stripe('pk_live_Oq5fAGTmI9ZNofC9u99jTuM200CHU9AjaD');
 
 		// Create an instance of Elements.
 		var elements = stripe.elements();
