--- a/apps/search/templates/search/contact.html
+++ b/apps/search/templates/search/contact.html
@@ -11,7 +11,7 @@
          <div class="w-100 text-white engine-pos">
             <h1 class="text-center">Contact searchCPD</h1><br>
             <div class="container text-left">
-               <p>Questions? Concerns? Interested in collaboarating or contributing to this open-source project? You can email us at searchcpd@protonmail.com. If you have any complaints about certain reviews, then please take down the Review Number of that publication and we will see if any of the content of the review needs to be censored or deleted for not meeting basic guidelines.</p>
+               <p>Questions? Concerns? Interested in collaboarating or contributing code to this project? You can email us at searchcpd@protonmail.com. If you have any complaints about certain reviews, then please take down the Review Number of that publication and we will see if any of the content of the review needs to be censored or deleted for not meeting basic guidelines.</p>
             </div>
          </div>
       </div>
