--- a/apps/search/templates/search/about.html
+++ b/apps/search/templates/search/about.html
@@ -11,7 +11,7 @@
          <div class="w-100 text-white engine-pos">
             <h1 class="text-center">About searchCPD</h1><br>
             <div class="container text-left">
-               <p>searchCPD is a grassroots initiative + tool to assist in holding police officers accountable. The goal for this project is to gather enough data in order to run custom search algorithms and pin-point potential officers who may abuse their power down the road. We seek to make an impact on police brutality through the transformative power of computer programming, data science, artificial intelligence, and our network of supporters.</p>
+               <p>searchCPD is a grassroots initiative + tool to assist in holding police officers accountable. The goal for this project is to gather enough data in order to run custom search algorithms and pin-point potential officers who may abuse their power down the road. We seek to make an impact on police brutality through the transformative power of computer programming, data science, artificial intelligence.</p>
             </div>
          </div>
       </div>
